force-app/main/default/objects/Compensation__c/Compensation__c.object-meta.xml
<CustomObject>
    <label>Compensation</label>
    <nameField>
        <label>Compensation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compensations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>