force-app/main/default/objects/Compensation__c/fields/Job_Category__c.field-meta.xml
<CustomField>
    <fullName>Job_Category__c</fullName>
    <inlineHelpText>Select your job category from the list or select other to enter another one</inlineHelpText>
    <label>Job Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Junior</fullName>
            </value>
            <value>
                <fullName>Semi-Senior</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>