force-app/main/default/objects/Compensation__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <description>Other_Job_Category</description>
    <label>Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>