force-app/main/default/objects/Compensation__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <description>22% of the amount</description>
    <formula>(Amount__c * 1.22) - Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>22% of the amount</inlineHelpText>
    <label>Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>