force-app/main/default/objects/Compensation__c/validationRules/Amount_cant_be_over_x.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_cant_be_over_x</fullName>
    <active>true</active>
    <description>For now amount cant be over 5000</description>
    <errorConditionFormula>Amount__c &gt; 5000</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Amount cant be over 5000</errorMessage>
</ValidationRule>