force-app/main/default/objects/Compensation__c/validationRules/Date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_validation</fullName>
    <active>true</active>
    <description>Validate. Start date is lower than End Date</description>
    <errorConditionFormula>Start_Date__c  &gt;  End_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date must be higher than Sater Date</errorMessage>
</ValidationRule>