force-app/main/default/objects/Compensation__c/validationRules/If_Other_Job_Category_is_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Other_Job_Category_is_selected</fullName>
    <active>true</active>
    <description>When the option &quot;Other&quot; is selected in the Job Category picklist</description>
    <errorConditionFormula>AND(ISPICKVAL( Job_Category__c , &#39;Other&#39;),ISBLANK( Other__c))</errorConditionFormula>
    <errorDisplayField>Other__c</errorDisplayField>
    <errorMessage>Other Job Category field is required when Other is selected.</errorMessage>
</ValidationRule>